--- a/public/ce/button_ce.html
+++ b/public/ce/button_ce.html
@@ -43,7 +43,7 @@
 	var thatDoc = document;
 	var thisDoc = (thatDoc._currentScript || thatDoc.currentScript).ownerDocument;
 	
-	class ToggleButtonCE extends CustomElement {
+	class ButtonCE extends CustomElement {
 
 		constructor() {
 			super();
@@ -99,7 +99,7 @@
 		}
 	}
 
-	window.customElements.define('togglebutton-ce', ToggleButtonCE);
+	window.customElements.define('button-ce', ButtonCE);
 
 })(window, document);
 </script>
