--- a/public/ce/button_ce.html
+++ b/public/ce/button_ce.html
@@ -5,13 +5,12 @@
 	<style>
 
 		:host {
-			background-color: var(--main-bg-color, yellow);
-			padding: 10px;
+			
 		}
 
 		:host([toggle="on"]) button {
 			border-radius: 5px;
-			background-color: var(--main-bg-color, blue);
+			background-color: var(--main-bg-color, gainsboro);
 		}
 
 		/* button:hover {
