--- a/public/ce/input_ce.html
+++ b/public/ce/input_ce.html
@@ -6,7 +6,10 @@
 
 	</style>
 	
-	<input type="text"></input>
+	<!-- <input type="text"></input> -->
+	<div class="input-group input-group-sm mb-3">
+		<input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+	  </div>
 
 </template>
 
