--- a/public/index.html
+++ b/public/index.html
@@ -68,12 +68,12 @@
 
 <select-ce></select-ce>
 
-<section-input-ce>
-    
+<section-input-ce> 
     <headline-input-ce title="Inflation" value="5" slot="inflation"></headline-input-ce>
     <headline-input-ce title="Interest" value="3" slot="interest"></headline-input-ce>
+    <headline-select-ce title="Period" selectedIndex="4" slot="period"></headline-select-ce>
 </section-input-ce>
-<headline-select-ce title="Period" selectedIndex="4"></headline-select-ce>
+
 
 
 <!-- <section-ce color="blue">
