--- a/public/ce/button_ce.html
+++ b/public/ce/button_ce.html
@@ -8,10 +8,10 @@
 			
 		}
 
-		:host([toggle="on"]) button {
+		/* :host([toggle="on"]) button {
 			border-radius: 5px;
 			background-color: var(--main-bg-color, gainsboro);
-		}
+		} */
 
 		/* button:hover {
 			border-radius: 20px;
@@ -32,7 +32,7 @@
 
 	</style>
 	
-	<button></button>
+	<button class="btn btn-secondary"></button>
 
 </template>
 
