--- a/public/ce/headline_select_ce.html
+++ b/public/ce/headline_select_ce.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<style>
-			/* :host {
+			:host {
 				display: inline-grid;
 				grid-template-columns: 20px auto 20px;
   				grid-template-rows: 20px auto 20px auto 20px;
@@ -30,7 +30,7 @@
   				grid-row-end: 4;
 			}
 
-			 */
+			
 
 			</style>
 
