--- a/public/ce/select_ce.html
+++ b/public/ce/select_ce.html
@@ -1,35 +1,20 @@
 <template>
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<style>
-		.info-section {
-			display: flex;
-  			justify-content: center;
-  			flex-direction: column;
-			text-align: center;
-			width: 200px;
-			height: auto;
-			margin: 5px;
-
-		background-color: lightblue;
-		border-radius: 5px;
-		color: #000;
-		}
-		.info-section-inner {
-
-		}
+		
 	</style>
+		<div class="input-group mb-3">
+			<select class="custom-select">
+			  <option selected>Choose...</option>
+			  <option value="1">One</option>
+			  <option value="2">Two</option>
+			  <option value="3">Three</option>
+			  <option value="4">Four</option>
+			  <option value="5">Five</option>
+			</select>
+		  </div>
 	
-	<div class="info-section">
-		<select>
-			<option value='1'>1</option>
-			<option value='2'>2</option>
-			<option value='3'>3</option>
-			<option value='4'>4</option>
-			<option value='5'>5</option>
-		</select>
-	</div>
 </template>
 
 <script>
