--- a/public/ce/headline_select_ce.html
+++ b/public/ce/headline_select_ce.html
@@ -5,7 +5,7 @@
 	<style>
 			:host {
 				display: inline-grid;
-				grid-template-columns: 20px auto 20px;
+				grid-template-columns: auto;
   				grid-template-rows: 20px auto 20px auto 20px;
 				background-color: beige
 			}
@@ -16,16 +16,16 @@
 
 			#headline {
 				color: green;
-				grid-column-start: 2;
-  				grid-column-end: 2;
+				grid-column-start: 1;
+  				grid-column-end: 1;
   				grid-row-start: 2;
   				grid-row-end: 2;
 			}
 
 			#select {
 				color: green;
-				grid-column-start: 2;
-  				grid-column-end: 2;
+				grid-column-start: 1;
+  				grid-column-end: 1;
   				grid-row-start: 4;
   				grid-row-end: 4;
 			}
@@ -34,7 +34,7 @@
 
 			</style>
 
-			<headline-ce id="headline" value="hej"></headline-ce>
+			<headline-ce id="headline" value="hej" class="h5"></headline-ce>
 			<select-ce id="select"></select-ce>
 </template>
 
