--- a/public/ce/select_ce.html
+++ b/public/ce/select_ce.html
@@ -6,7 +6,7 @@
 	</style>
 		<div class="input-group mb-3">
 			<select class="custom-select">
-			  <option selected>Choose...</option>
+			  <option selected>välj...</option>
 			  <option value="1">One</option>
 			  <option value="2">Two</option>
 			  <option value="3">Three</option>
