Clear section working

--- a/public/ce/headline_input_ce.html
+++ b/public/ce/headline_input_ce.html
@@ -36,7 +36,7 @@
 			<!-- <slot id="mainheadline" name="mainheadline"></slot>
 			<slot id="clearbutton" name="clearbutton"></slot> -->
 			<headline-ce id="headline" class="h5"></headline-ce>
-			<input-ce id="input"></input-ce>
+			<input-ce id="input" listener="cleargeneralinputsection@clearfield"></input-ce>
 </template>
 
 
