--- a/public/ce/headline_select_ce.html
+++ b/public/ce/headline_select_ce.html
@@ -35,7 +35,7 @@
 			</style>
 
 			<headline-ce id="headline" value="hej" class="h5"></headline-ce>
-			<select-ce id="select"></select-ce>
+			<select-ce id="select" listener="cleargeneralinputsection@clearfield"></select-ce>
 </template>
 
 
