--- a/public/ce/section_input_general_ce.html
+++ b/public/ce/section_input_general_ce.html
@@ -76,7 +76,7 @@
 			</style>
 		
 			<headline-ce value="Allmänt" id="mainheadline" class="h3"></headline-ce>
-			<button-ce value="Rensa" id="clearbutton" class="btn btn-secondary"></button-ce>
+			<button-ce value="Rensa" id="clearbutton" class="btn btn-secondary" dispatch="cleargeneralinputsection"></button-ce>
 			
 			
 			<slot id="anycontainer" name="anycontainer"></slot>
